<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".screen.JokesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                style="@style/style_image"
                android:src="@drawable/im1"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_85sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    style="@style/style_text_header"
                    android:textColor="@color/armadillo2"
                    android:text="@string/txt_header1"/>

                <TextView
                    style="@style/style_text_header"
                    android:text="@string/txt_header2"
                    android:textColor="@color/armadillo"/>

            </LinearLayout>

            <ImageView
                style="@style/style_image"
                android:src="@drawable/im2"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            style="@style/style_text_body1"
            android:text="@string/txt_labeltext1"
            android:paddingTop="@dimen/_30sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"/>

        <TextView
            style="@style/style_text_body1"
            android:text="@string/txt_labeltext2"
            android:paddingTop="@dimen/_20sdp"
            android:paddingBottom="@dimen/_20sdp"
            android:textSize="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/tv_body_joke"
            style="@style/style_text_body2"
            android:layout_marginTop="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/btn_vote_again"
            style="@style/style_text_vote"
            android:layout_gravity="center"
            android:background="@color/blue"
            android:text="@string/txt_button_vote_again"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_like"
                style="@style/style_text_vote"
                android:background="@color/blue"
                android:text="@string/txt_button_like"/>

            <TextView
                android:id="@+id/btn_dislike"
                style="@style/style_text_vote"
                android:layout_marginStart="@dimen/_30sdp"
                android:background="@color/greeen"
                android:text="@string/txt_button_dislike"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <View
            style="@style/style_line"
            android:layout_marginBottom="@dimen/_5sdp"/>

        <TextView
            style="@style/style_text"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/armadillo2"
            android:text="@string/txt_labeltext3"/>

        <TextView
            style="@style/style_text"
            android:textColor="@color/armadillo"
            android:text="@string/txt_labeltext4"
            android:textSize="@dimen/_11sdp"
            android:layout_marginBottom="@dimen/_10sdp"/>
    </LinearLayout>

    </RelativeLayout>

</ScrollView>